implemented attack on controller and views

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,3 @@
-<h1><%= @player_one_name %> vs <%= @player_two_name %></h1>
-<h3><%= @player_two_name %>: 100HP</h3>
+<h1><%= @player_one.name %> vs <%= @player_two.name %></h1>
+<h3><%= @player_two.name %>: <%= @player_two.hp %>HP</h3>
 <a href='/attack'>Attack</a>
