--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,2 @@
-<h3><%= @player_one_name %> attacked <%= @player_two_name %></h3>
+<h3><%= @player_one.name %> attacked <%= @player_two.name %></h3>
+<a href='/play'>Continue</a>
