--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,5 @@
 <h1><%= @player_one.name %> vs <%= @player_two.name %></h1>
+<h3><%= @player_one.name %>: <%= @player_one.hp %>HP</h3>
 <h3><%= @player_two.name %>: <%= @player_two.hp %>HP</h3>
+<h3><%= @current_player.name %>'s turn</h3>
 <a href='/attack'>Attack</a>
